# quant-pricing-lab

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.agents/: README.md
.agents/brain/: brain.md
.agents/brain/adr/: 0001-public-api-truth-source.md
.agents/skills/: README.md
.agents/skills/qpl-thin-slice/: SKILL.md
.github/workflows/: ci.yml
AGENT/: README.md  brain.md  steering-brief.md
AGENT/adr/: 0000-template.md  0002-thin-vertical-slices.md
docs/: ROADMAP.md
examples/: bs_analytic.py  bs_mc_vs_analytic.py  historical_vol_demo.py  implied_vol_demo.py  market_data_demo.py  pde_greeks_demo.py
notebooks/: 02_implied_vol_teaching.ipynb  03_implied_vs_realized_vol.ipynb  04_return_model_fit_mu_sigma.ipynb  mc_stability.ipynb  pde_convergence.ipynb
scripts/: setup_git.sh
src/qpl/: __init__.py  exceptions.py  pricing.py
src/qpl/engines/: __init__.py  base.py
src/qpl/engines/analytic/: __init__.py  black_scholes.py
src/qpl/engines/mc/: pricers.py
src/qpl/engines/pde/: pricers.py
src/qpl/instruments/: __init__.py  options.py  payoffs.py
src/qpl/market/: __init__.py  curves.py  data.py  market.py  stats.py
src/qpl/models/: __init__.py  black_scholes.py
src/qpl/utils/: statistics.py
tests/: test_black_scholes_analytic.py  test_examples_smoke.py  test_historical_vol.py  test_implied_vol.py  test_market_data.py  test_market_stats.py  test_mc_greeks.py  test_mc_pricing.py  test_payoffs.py  test_pde_greeks.py  test_pde_pricing.py  test_pricing_analytic.py
